# physical-ai-robotics-textbook

./: .gitignore  CNAME  README.md  test_chatbot.js  test_rag_api.js
.specify/memory/: constitution.md
backend/: .gitignore  Dockerfile  README.md  main.py  render.yaml  requirements.txt
history/prompts/: 001-implement-deploy.tasks.prompt.md  002-implement-chat-icon.tasks.prompt.md  003-implement-deploy.tasks.prompt.md  004-implement-reg-backend.tasks.prompt.md
history/prompts/001-textbook-project-structure/: 001-implement-chatbot-textbook-integration.implementation.prompt.md  002-troubleshoot-chatbot-not-working.red.prompt.md  003-remove-logo-and-blog-from-header.refactor.prompt.md  005-implement-rag-chatkit.implement.prompt.md  006-implement-frontend-chat.implement.prompt.md  (+5 more)
rag-backend/: .vercelignore  API_CONNECTION.md  Dockerfile  load_textbook_content.py  pyproject.toml  requirements.txt  requirements_render.txt  setup.py  test_rag_chat.js
rag-backend/api/: index.py  vercel_handler.py
rag-backend/src/: main.py
rag-backend/src/api/: health_router.py  rag_router.py
rag-backend/src/models/: rag_models.py
rag-backend/src/services/: rag_service.py
rag-backend/src/utils/: text_processor.py
specs/001-textbook-project-structure/: data-model.md  implementation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-embedding-pipeline-docusaurus/: spec.md  tasks.md
textbook/: docusaurus.config.js  package-lock.json  sidebars.js
textbook/docs/: quickstart.md
textbook/rag-backend/: README.md  requirements.txt
(+79 files in other folders)
